--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,25 @@
 
   <title>Hello, world!</title>
 </head>
-<body> 
-<h1>Hello, world!</h1>
+<body class="container">
+<h1>Hello</h1>
+<button type="button" class="btn btn-primary">Primary</button>
+<button type="button" class="btn btn-secondary">Secondary</button>
+<button type="button" class="btn btn-success">Success</button>
+<button type="button" class="btn btn-danger">Danger</button>
+<button type="button" class="btn btn-warning">Warning</button>
+<button type="button" class="btn btn-info">Info</button>
+<button type="button" class="btn btn-light">Light</button>
+<button type="button" class="btn btn-dark">Dark</button>
+
+<button type="button" class="btn btn-link">Link</button>
+<h1>Toai Le</h1>
+<div class="row"  >
+  <div class="col-4 bg-black "> col1</div>
+  <div class="col-4 bg-danger">col2</div>
+  <div class="col-4 bg-light">col3</div>
+
+</div>
 
 <!-- Optional JavaScript; choose one of the two! -->
 
